

[project]
name = "oscal"
version = "1.0.0"
description = "Python web server application to validate, convert and manage OSCAL content."
requires-python = ">=3.12"
authors = [{ name = "Brian Ruf", email = "Brian@RufRisk.com" }]
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "loguru            >=0.7.3",  
    "markdown          >=3.0.0",
    "fastapi           >= 0.116.1",
    "uvicorn[standard] >= 0.35.0",
    "requests          >= 2.32.5",
    "aiohttp           >= 3.12.15",
    "Jinja2            >= 3.1.7", 
    "oscal @ git+https://github.com/brian-ruf/oscal-class.git@main",
    "ruf-common @ git+https://github.com/brian-ruf/ruf-common-python.git@main"
]

