[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "oscal"
version = "1.0.3"
description = "Python class to validate, convert and manage OSCAL content."
requires-python = ">=3.9"
authors = [{ name = "Brian Ruf", email = "Brian@RufRisk.com" }]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = ["oscal", "nist", "security", "compliance", "ssp", "fedramp", "csf"]

dependencies = [
    "loguru        >= 0.7.3",
    "saxonche      == 12.9.0",
    "jsonschema_rs >= 0.26.1",
    "xmlschema     >= 3.4.3",
    "PyYAML        >= 6.0",
    "markdown      >= 3.0.0",
    "ruf-common    >= 1.1.0",
]

[project.urls]
Homepage = "https://github.com/brian-ruf/oscal-class"
Repository = "https://github.com/brian-ruf/oscal-class.git"
Documentation = "https://github.com/brian-ruf/oscal-class#readme"
Issues = "https://github.com/brian-ruf/oscal-class/issues"

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "python-dateutil >= 2.8",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W291", "W293", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["oscal*"]
exclude = ["support*", "tests*"]

[tool.setuptools.package-data]
oscal = ["py.typed", "data/*.xml", "data/*.zip"]
